plugins/kotlin/injection/k2/tests/testData/kotlinInjectedInMarkdownHighlighting/withKotlinDeclarations.md.highlighting
<!HIGHLIGHTING("textAttributesKey='MARKDOWN_CODE_FENCE_MARKER'")!>```<!><!HIGHLIGHTING("textAttributesKey='MARKDOWN_CODE_FENCE_LANGUAGE'")!>kotlin<!>
class A {
    class B {

    }
}

fun functionC(x: Int) {
    println(A.b().toString())
}
<!HIGHLIGHTING("textAttributesKey='MARKDOWN_CODE_FENCE_MARKER'")!>```<!>
